# kinova_ar_teleop

./: CMakeLists.txt  README.md  package.xml
config/: one_hand_params.yaml  params.yaml
include/kinova_ar_teleop/: hololens_utility.cpp  hololens_utility.h
launch/: kinova_hand_teleop.launch  kinova_hand_teleop_test.launch  one_hand_teleop.launch  one_hand_teleop_test.launch  two_hand_teleop.launch  two_hand_teleop_test.launch
scripts/: hand_control.py  utilities.py
src/: one_hand_teleop_w_twist.cpp  servo_with_ar_hands.cpp  teleop_w_twist.cpp  test_pub.cpp  two_hand_teleop_w_twist.cpp
urdf/: kortex_dual_robots.urdf  kortex_dual_robots.xacro  visualize.launch
